--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header class="site-header" role="banner">
-
+  <link rel="stylesheet" href="../../../assets/applause-button.css" />
+  <script src="../../../assets/applause-button.js"></script>
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
