--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<head>
+  <script src="/csp.js" defer></script>
+</head>
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
