@A6HgfDeI - add security headers

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <head>
-  <script src="/csp.js" defer></script>
+  <script src="/securityHeaders.js" defer></script>
 </head>
 
 <div class="home">
