--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,12 @@ layout: default
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
+  {% if page.lang == 'en' or page.url contains '/en/' %}
+    {% assign t = site.data.translations.en %}
+  {% else %}
+    {% assign t = site.data.translations.pt %}
+  {% endif %}
+
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
@@ -12,7 +18,7 @@ layout: default
       {%- if page.author -%}
        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}
-      <span> </span> • Tempo de leitura:  {% include read_time.html %}
+      <span> </span> • {{ t.reading_time }} {% include read_time.html %}
     </p>
   </header>
   <div class="post-content e-content" itemprop="articleBody">
