--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -46,6 +46,10 @@
     }
   }
 
+  .trigger {
+    text-align: end;
+  }
+
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
