--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,14 @@ layout: default
 
   {{ content }}
 
+  {% if page.lang == 'en' or page.url contains '/en/' %}
+    {% assign t = site.data.translations.en %}
+  {% else %}
+    {% assign t = site.data.translations.pt %}
+  {% endif %}
+
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+    <h2 class="post-list-heading">{{ page.list_title | default: t.posts_heading }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
@@ -26,13 +32,13 @@ layout: default
         </h3>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
-          <a href="{{ post.url | relative_url }}">Leia mais</a>
+          <a href="{{ post.url | relative_url }}">{{ t.read_more }}</a>
         {%- endif -%}
       </li>
       {%- endfor -%}
     </ul>
 
-    <p class="rss-subscribe">Acompanhe nosso <a href="{{ "/feed.xml" | relative_url }}">feed RSS</a></p>
+    <p class="rss-subscribe">{{ t.rss_follow }} <a href="{{ "/feed.xml" | relative_url }}">{{ t.rss_feed }}</a></p>
   {%- endif -%}
 
 </div>
